--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
   <link rel="stylesheet" href="./assets/style.css">
   <title>Frontend Mentor | Intro component with sign up form</title>
   <script src="./assets/script.js"></script>
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ 
 </head>
 <body>
 
@@ -60,10 +56,8 @@
   </div>
 
   <footer>
-    <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+      Coded by <a href="https://github.com/LevanMakaradze">Levan Makaradze</a>.
   </footer>
 </body>
 </html>
